--- a/TestGridControl/TestGridControl.csproj
+++ b/TestGridControl/TestGridControl.csproj
@@ -79,6 +79,8 @@
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="FunctionOne.cs" />
+    <Compile Include="FunctionTwo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmMain.resx">
